[gd_scene load_steps=11 format=3 uid="uid://clelshseuqewk"]

[ext_resource type="Script" uid="uid://de38jmx2a1k7w" path="res://scripts/picking.gd" id="1_hrbhj"]
[ext_resource type="PackedScene" uid="uid://dd5d7d2xh71xl" path="res://scenes/game_timer.tscn" id="1_vttta"]
[ext_resource type="Texture2D" uid="uid://5iu52a761pr4" path="res://assets/art/Card_Red.png" id="3_nhsyr"]
[ext_resource type="Texture2D" uid="uid://dbb8cek1jr8u7" path="res://assets/art/Card_Blue.png" id="4_gv7c6"]
[ext_resource type="Texture2D" uid="uid://c3di1g16y5mcl" path="res://assets/art/Card_Green.png" id="5_4s025"]
[ext_resource type="Texture2D" uid="uid://bv4i4odikm1ue" path="res://assets/art/Card_Yellow.png" id="6_ko1e3"]
[ext_resource type="Texture2D" uid="uid://4dtxr53ii61c" path="res://assets/art/Card_Orange.png" id="7_omqxp"]
[ext_resource type="Texture2D" uid="uid://dgwve33dp1fvv" path="res://assets/art/Card_Purple.png" id="8_v1iid"]
[ext_resource type="Texture2D" uid="uid://bka340h4p12t6" path="res://assets/art/Card_Black.png" id="9_t101e"]
[ext_resource type="Texture2D" uid="uid://citi1rxcqtdgq" path="res://assets/art/Card_White.png" id="10_rdfp6"]

[node name="Picking" type="Node2D"]
script = ExtResource("1_hrbhj")

[node name="Background" type="Panel" parent="."]
visible = false
offset_right = 1151.0
offset_bottom = 649.0

[node name="GameTimer" parent="." instance=ExtResource("1_vttta")]

[node name="RedCabinet" type="TextureButton" parent="."]
offset_left = 317.0
offset_top = 208.0
offset_right = 451.0
offset_bottom = 383.0
texture_normal = ExtResource("3_nhsyr")
ignore_texture_size = true
stretch_mode = 4

[node name="BlueCabinet" type="TextureButton" parent="."]
offset_left = 319.0
offset_top = 382.0
offset_right = 452.0
offset_bottom = 555.0
texture_normal = ExtResource("4_gv7c6")
ignore_texture_size = true
stretch_mode = 4

[node name="GreenCabinet" type="TextureButton" parent="."]
offset_left = 452.0
offset_top = 209.0
offset_right = 585.0
offset_bottom = 382.0
texture_normal = ExtResource("5_4s025")
ignore_texture_size = true
stretch_mode = 4

[node name="YellowCabinet" type="TextureButton" parent="."]
offset_left = 450.0
offset_top = 383.0
offset_right = 583.0
offset_bottom = 556.0
texture_normal = ExtResource("6_ko1e3")
ignore_texture_size = true
stretch_mode = 4

[node name="OrangeCabinet" type="TextureButton" parent="."]
offset_left = 589.0
offset_top = 209.0
offset_right = 722.0
offset_bottom = 382.0
texture_normal = ExtResource("7_omqxp")
ignore_texture_size = true
stretch_mode = 4

[node name="PurpleCabinet" type="TextureButton" parent="."]
offset_left = 588.0
offset_top = 382.0
offset_right = 721.0
offset_bottom = 555.0
texture_normal = ExtResource("8_v1iid")
ignore_texture_size = true
stretch_mode = 4

[node name="BlackCabinet" type="TextureButton" parent="."]
offset_left = 725.0
offset_top = 206.0
offset_right = 858.0
offset_bottom = 379.0
texture_normal = ExtResource("9_t101e")
ignore_texture_size = true
stretch_mode = 4

[node name="WhiteCabinet" type="TextureButton" parent="."]
offset_left = 724.0
offset_top = 383.0
offset_right = 857.0
offset_bottom = 556.0
texture_normal = ExtResource("10_rdfp6")
ignore_texture_size = true
stretch_mode = 4

[connection signal="game_timer_end" from="GameTimer" to="." method="_on_game_timer_game_timer_end"]
[connection signal="pressed" from="RedCabinet" to="." method="_on_red_cabinet_pressed"]
[connection signal="pressed" from="BlueCabinet" to="." method="_on_blue_cabinet_pressed"]
[connection signal="pressed" from="GreenCabinet" to="." method="_on_green_cabinet_pressed"]
[connection signal="pressed" from="YellowCabinet" to="." method="_on_yellow_cabinet_pressed"]
[connection signal="pressed" from="OrangeCabinet" to="." method="_on_orange_cabinet_pressed"]
[connection signal="pressed" from="PurpleCabinet" to="." method="_on_purple_cabinet_pressed"]
[connection signal="pressed" from="BlackCabinet" to="." method="_on_black_cabinet_pressed"]
[connection signal="pressed" from="WhiteCabinet" to="." method="_on_white_cabinet_pressed"]
